# berricake

./: CMakeLists.txt  LICENSE  README.md
cmakeconf/: compiler_conf.cmake
src/: CMakeLists.txt
src/component/: CMakeLists.txt  ComponentRegistry.cpp  ComponentRegistry.h  EPWReader.cpp  EPWReader.h  Output.cpp  Output.h  STLSurfaceGroup.cpp  STLSurfaceGroup.h  WindModule.cpp  WindModule.h
src/core/: BaseComponent.cpp  BaseComponent.h  CMakeLists.txt  ComponentFactory.cpp  ComponentFactory.h  Link.cpp  Link.h  SimManager.cpp  SimManager.h  SimTime.cpp  SimTime.h  Site.cpp  Site.h  SystemStateHub.cpp  SystemStateHub.h
src/geometry/: CMakeLists.txt  Point3D.cpp  Point3D.h  ShadowAnalyzer.cpp  ShadowAnalyzer.h  SurfaceGroup.cpp  SurfaceGroup.h  Triangle.cpp  Triangle.h  TriangleMesh.cpp  TriangleMesh.h
src/test/: CMakeLists.txt  berricake.cpp  test.cpp
src/three_party/: CMakeLists.txt
src/three_party/nlohmann/: CMakeLists.txt  json.cpp  json.hpp
src/util/: CMakeLists.txt  Parser.cpp  Parser.h  Radiation.cpp  Radiation.h  SunPosition.cpp  SunPosition.h
